{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 23,
  "lineage": "7742382e-9cbf-f995-42e5-5b6883590ddd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ec2_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ace445be9c7d0055",
            "arn": "arn:aws:ec2:us-east-1:122151287454:elastic-ip/eipalloc-0ace445be9c7d0055",
            "domain": "vpc",
            "id": "eipalloc-0ace445be9c7d0055",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-222-70-120.compute-1.amazonaws.com",
            "public_ip": "3.222.70.120",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-ec2-eip"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-ec2-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pathfinder_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f8a61b66d1accaee",
            "arn": "arn:aws:ec2:us-east-1:122151287454:instance/i-0d501ba3bd5bb3f68",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "pathfinder-ec2-instance-profile",
            "id": "i-0d501ba3bd5bb3f68",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "PathFinder_prod",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0685ff571f98060db",
            "private_dns": "ip-10-0-1-202.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.202",
            "public_dns": "ec2-34-205-166-69.compute-1.amazonaws.com",
            "public_ip": "34.205.166.69",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01dcd2192b4dd3699",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3599b723ad4de18",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-ec2-production"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-ec2-production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fcf01ec4c71ee1a0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_s3_role",
            "aws_security_group.ec2_sg",
            "aws_subnet.public_1",
            "aws_vpc.pathfinder_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pathfinder_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:internet-gateway/igw-02ee2229023c91918",
            "id": "igw-02ee2229023c91918",
            "owner_id": "122151287454",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-igw"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-igw"
            },
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:route-table/rtb-00357fd08a23776da",
            "id": "rtb-00357fd08a23776da",
            "owner_id": "122151287454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02ee2229023c91918",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-public-route-table"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pathfinder_igw",
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ba0a098adba76de",
            "route_table_id": "rtb-00357fd08a23776da",
            "subnet_id": "subnet-0d3599b723ad4de18"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pathfinder_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_1",
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019dd55d4439f2116",
            "route_table_id": "rtb-00357fd08a23776da",
            "subnet_id": "subnet-0960f81dcb133a3f6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.pathfinder_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_2",
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:security-group/sg-0fcf01ec4c71ee1a0",
            "description": "Permite trafico SSH, HTTP y HTTPS entrante",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcf01ec4c71ee1a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pathfinder-ec2-security-group",
            "name_prefix": "",
            "owner_id": "122151287454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-ec2-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:security-group/sg-0f78cffa320d01881",
            "description": "Permite acceso a PostgreSQL desde la instancia EC2 de Pathfinder",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f78cffa320d01881",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL desde EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fcf01ec4c71ee1a0"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "pathfinder-rds-security-group",
            "name_prefix": "",
            "owner_id": "122151287454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-rds-sg"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:subnet/subnet-0c3b7f5dc59a1e87d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c3b7f5dc59a1e87d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122151287454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-private-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-private-1"
            },
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:subnet/subnet-0d83d6d23ab5793b4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d83d6d23ab5793b4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122151287454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-private-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-private-2"
            },
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:subnet/subnet-0d3599b723ad4de18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3599b723ad4de18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122151287454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-public-1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-public-1"
            },
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:subnet/subnet-0960f81dcb133a3f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0960f81dcb133a3f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122151287454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-public-2"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-subnet-public-2"
            },
            "vpc_id": "vpc-00f4d79f36d66b368"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.pathfinder_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pathfinder_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122151287454:vpc/vpc-00f4d79f36d66b368",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080b137141989f81c",
            "default_route_table_id": "rtb-0749441ceef82805c",
            "default_security_group_id": "sg-0809d01a363a57691",
            "dhcp_options_id": "dopt-0a03c136ff83b3fc5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00f4d79f36d66b368",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0749441ceef82805c",
            "owner_id": "122151287454",
            "tags": {
              "Environment": "prod",
              "Name": "pathfinder-vpc"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "pathfinder-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}